Bug 158766 - Escape key doesn't work when editing a math formula
Summary: Escape key doesn't work when editing a math formula
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Formula Editor (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:24.8.0 target:24.2.0.0.beta2
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2023-12-18 16:12 UTC by Xisco Faulí
Modified: 2023-12-19 09:50 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2023-12-18 16:12:36 UTC
This is an issue I found why writing a unittest for tdf#157569

Steps to reproduce:
1. Open attachment 41418 [details] from bug 32636
2. Select the formula
3. Use enter to go into edit mode
4. Press ESC to leave

-> Nothing happens

Reproduced in

Version: 24.2.0.0.beta1+ (X86_64) / LibreOffice Community
Build ID: 0034d2ab9382da86340738137218791a4ccc9c90
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: fr-FR (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2023-12-18 16:13:40 UTC
Regression introduced by:

author	Khaled Hosny <khaled@libreoffice.org>	2023-09-05 20:37:25 +0300
committer	خالد حسني <khaled@libreoffice.org>	2023-09-12 14:14:52 +0200
commit aa396ee162ee0eb223c90ab4f9bd55014cf94775 (patch)
tree 5f6a2a87429502d4a076d86569c55fd9f900dfe3
parent 26313599b0eae3b397bb341c63d185f8771af82d (diff)
starmath: Keep focus on math widget when inline editing is enabled

Bisected with: bibisect-linux64-24.2
Comment 2 Mike Kaganski 2023-12-18 17:20:46 UTC
A workaround is to make sure that the edit window is active prior to pressing Esc key.

The fix would be to handle Exc in the Math widget, too.
Comment 3 Mike Kaganski 2023-12-18 17:58:33 UTC
https://gerrit.libreoffice.org/c/core/+/160927
Comment 4 Commit Notification 2023-12-18 19:48:55 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/29b11fa3b5574dc3f42f55b0716f71054030c6c2

tdf#158766: handle Escape key in SmGraphicWidget

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-12-19 09:50:53 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/66adbc001783fd9eb2ca05358f117ff8cc6b9d84

tdf#158766: handle Escape key in SmGraphicWidget

It will be available in 24.2.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.