tdf#158766: handle Escape key in SmGraphicWidget

Same as in SmEditTextWindow

Change-Id: I4088fa2deb8b14d5cc0f48423dba492c45b0f61f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/160927
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>